--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,6 +5,7 @@
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
+@import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/Atomy-Bold.woff');
 
 html {
   font-family: sans-serif; /* 1 */
