--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -663,8 +663,8 @@ form {
 
 #main-content h4 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 15px;
+  font-family: 'Atomy-Bold';
+  font-size: 18px;
   font-weight: bold;
   color: #474747;
   text-indent: 3px;
