--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -615,7 +615,7 @@ form {
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Atomy-bold';
   font-size: 2.8em;
   font-weight: normal;
   color: #474747;
