--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -666,7 +666,7 @@ form {
   margin-bottom: 8px;
   font-family: 'Atomy-Bold';
   font-size: 17px;
-  font-weight: bold;
+  font-weight: normal;
   color: #474747;
   text-indent: 3px;
 }
