--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -616,7 +616,7 @@ form {
   margin-top: 0;
   margin-bottom: 0;
   font-family: 'Atomy-bold';
-  font-size: 2.5em;
+  font-size: 40px;
   font-weight: bold;
   color: #474747;
   text-indent: 6px;
