update text design

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -563,13 +563,14 @@ pre {
   padding: 20px;
   overflow: auto;
   text-shadow: none;
-  background: #fff;
-  border: solid 1px #f2f2f2;
+  background: #272822;
+  border: solid 1px #dbdbdb;
+  border-radius : 3px; 
 }
 pre code {
   padding: 0;
-  color: #2879d0;
-  background-color: #fff;
+  color: #f8f8f2;
+  background-color: #272822;
   border: none;
 }
 
