--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -633,7 +633,7 @@ form {
 
 #main-content h2 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Atomy-Bold';
   font-size: 22px;
   font-weight: bold;
   color: #474747;
@@ -649,7 +649,7 @@ form {
 #main-content h3 {
   margin-top: 24px;
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Atomy-Bold';
   font-size: 18px;
   font-weight: bold;
   color: #474747;
@@ -675,7 +675,6 @@ form {
 h4:before {
   padding-right: 0.3em;
   margin-left: -2.8em;
-  content: "////";
   color: #9ddcff;
 }
 
