--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -863,3 +863,9 @@ dl dd {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
+
+
+.div-main-content {
+background-color:#fff;
+box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
+}
