--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -479,9 +479,10 @@ header h2 {
 }
 
 .inner {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
+  max-width: 1300px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #content-wrapper {
@@ -490,8 +491,7 @@ header h2 {
 }
 
 #main-content {
-  float: left;
-  width: 950px;
+
 }
 
 #main-content img {
