update font design

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -429,8 +429,8 @@ th {
 
 /* LAYOUT STYLES */
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 15px;
+  font-family: 'Atomy-bold';
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
   color: #666;
