--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -880,5 +880,5 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 }
 
 .div-main .div-main-content .div-main-text{
- padding-left: 4%;
+ padding-top: 4%;
 }
