--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1> {{ site.name }} </h1>
-        <h2>Java , Machine-Learning , Math .. study .. etc</h2>
+        <h2>ybebee9@gmail.com</h2>
       </div>
     </header>
 
