--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
   <body>
     <header>
       <div class="inner">
+        <img src="./images/water-plant.jpeg">
         <h1> {{ site.name }} </h1>
         <h2>ybebee9@gmail.com</h2>
       </div>
