--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -882,3 +882,9 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 .div-main .div-main-content .div-main-text{
  padding-top: 4%;
 }
+
+.profile-image{
+  width: 320px;
+  height: 320px;
+  border-radius: 50%;
+}
