--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    {% include navbar.html %}
     <header>
       <div class="header-inner">
         <img src="./images/water-plant.jpeg" class="profile-image">
