--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -736,10 +736,13 @@ p a {
 }
 
 blockquote {
-  padding: 0 0 0 30px;
-  margin-bottom: 20px;
-  font-size: 1.6em;
-  border-left: 10px solid #e9e9e9;
+  margin: 1em 0;
+  padding: 15px 20px;
+  border-left: 4px solid #b8f276;
+  background: #f8f8f8;
+  border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;
+  position: relative;
 }
 
 ul {
