--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -738,7 +738,7 @@ p a {
 blockquote {
   margin: 1em 0;
   padding: 15px 20px;
-  border-left: 4px solid #b8f276;
+  border-left: 4px solid #9af276;
   background: #f8f8f8;
   border-bottom-right-radius: 2px;
   border-top-right-radius: 2px;
