--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -440,7 +440,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
-  color: #666;
+  color: #3b3b3b;
   background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
 }
 
