--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -644,7 +644,7 @@ form {
 #main-content h1:before {
   padding-right: 0.3em;
   margin-left: -0.9em;
-  color: #9ddcff;
+  color: #ff9dd5;
   content: "/";
 }
 
