--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -644,7 +644,7 @@ form {
 #main-content h1:before {
   padding-right: 0.3em;
   margin-left: -0.9em;
-  color: #9ddcff;
+  color: #ff9dd5;
   content: "/";
 }
 
@@ -660,7 +660,7 @@ form {
   padding-right: 0.3em;
   margin-left: -1.5em;
   content: "//";
-  color: #9ddcff;
+  color: #ff9dd5;
 }
 
 #main-content h3 {
@@ -677,7 +677,7 @@ form {
   padding-right: 0.3em;
   margin-left: -2em;
   content: "///";
-  color: #9ddcff;
+  color: #ff9dd5;
 }
 
 #main-content h4 {
@@ -692,7 +692,7 @@ form {
 h4:before {
   padding-right: 0.3em;
   margin-left: -2.8em;
-  color: #9ddcff;
+  color: #ff9dd5;
 }
 
 #main-content h5 {
