--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -908,3 +908,14 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
   height: 220px;
   border-radius: 50%;
 }
+
+/* 2019.07.11 add */
+::-moz-selection { /* Code for Firefox */
+  color: red;
+  background: yellow;
+}
+
+::selection {
+  color: red;
+  background: yellow;
+}
