--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -915,6 +915,7 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
   background: yellow;
 }
 
+/* 2019.07.11 add  */
 ::selection {
   color: red;
   background: yellow;
