--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -911,12 +911,12 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 
 /* 2019.07.11 add */
 ::-moz-selection { /* Code for Firefox */
-  color: red;
-  background: yellow;
+  color: #ffffff;
+  background: #ff9dd5;
 }
 
 /* 2019.07.11 add  */
 ::selection {
-  color: red;
-  background: yellow;
+  color: #ffffff;
+  background: #ff9dd5;
 }
