--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -459,8 +459,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
+  background: #d65a5a;
 }
 
 header h1 {
@@ -479,7 +478,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #252525;
   letter-spacing: 0;
 }
 
