--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -459,7 +459,7 @@ header {
   padding-top: 1px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #a28aff;
+  background: #fdb9d2;
 }
 
 header h1 {
