--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="header-inner">
-        <img src="./images/water-plant.jpeg" class="profile-image">
+        <img src="./images/myProfile.jpeg" class="profile-image">
         <h1> {{ site.name }} </h1>
         <h2>ybebee9@gmail.com</h2>
       </div>
