--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,10 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
+        <section class="section-category>
+          
+        </section>
+        <section class="section-post" id="main-content">
           
           {{ content }}
 
