--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section class="section-category">
-          <h1>Index</h1>
+          <h1>Category</h1>
         </section>
         <section class="section-post" id="main-content">
           
