--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -934,3 +934,9 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
   max-width: 80%;
   float: right;
 }
+
+/* 2019.07.12 ybebee9 add */
+.li-category{
+  font-weight: bold;
+  font-size: 25px;
+}
