--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           <nav>
             <ul>
               {% for item in site.categories %}
-                <li>
+                <li class="li-category">
                   <a href="#{{ item | first | slugify }}">
                     {{ item | first }}
                   </a>
