--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -940,3 +940,11 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
   font-weight: bold;
   font-size: 25px;
 }
+
+/* 2019.07.12 ybebee9 add */
+.p-category{
+ color: #ae81ff;
+ font-size: 25px;
+ font-weight: bold;
+ margin-bottom: 10px;
+}
