a href="{{ site.baseurl }} 추가
categories.md파일로 이동하도록 앞에 {{ site.baseurl }} 추가함

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <ul>
               {% for item in site.categories %}
                 <li class="li-category">
-                  <a href="/categories/">
+                  <a href="{{ site.baseurl }}categories/">
                     {{ item | first }}
                   </a>
                 </li>
