categories.md 링크 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <ul>
               {% for item in site.categories %}
                 <li class="li-category">
-                  <a href="{{ site.baseurl }}categories/">
+                  <a href="{{ site.baseurl }}{% link categories.md %}">
                     {{ item | first }}
                   </a>
                 </li>
