--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         </section>
         {% if page.category-val == true %}
         <section class="section-category-list">
-         {{ content }}
+         테스트임당
         </section>
         {% elsif%}
         <section class="section-post" id="main-content">
