--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
             </ul>
           </nav>
         </section>
-        {% if page.category-val == true %}
+        {% if page.categoryVal == true %}
         <section class="section-category-list">
          테스트임당
         </section>
