--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -948,3 +948,9 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
  font-weight: bold;
  margin-bottom: 10px;
 }
+
+/* 2019.07.22 ybebee9 add */
+.section-category-list{
+  max-width: 80%;
+  float: left;
+}
