--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
             </ul>
           </nav>
         </section>
+        <div value="page.categoryVal"></div>
         {% if page.categoryVal == true %}
         <section class="section-category-list">
          테스트임당
