category_name 추가

--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 {% for item in site.categories %}
-<h2>{{ site.categories }}</h2>
+<h2 id="{{ category_name | slugify }}">{{ category_name }}</h2>
 {% endfor %}
