--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,6 +2,5 @@
 layout: default
 ---
 {% for item in site.categories %}
-<h2 id="{{ category_name | slugify }}">{{ category_name }}</h2>
+<p class="p-category">{{ site.categories }}</p>
 {% endfor %}
-쿠쿠
