p-category-list style add

--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 {% for item in site.categories %}
-<p class="p-category">{{ item | first }}</p>
+<p class="p-category-list">{{ item | first }}</p>
 {% endfor %}
