--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -954,3 +954,12 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
   max-width: 80%;
   float: left;
 }
+
+
+/* 2019.07.22 ybebee9 add */
+.p-category-list{
+ color: #3b3b3b;
+ font-size: 45px;
+ font-weight: bold;
+ margin-bottom: 10px;
+}
