--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -4,3 +4,17 @@ layout: default
 {% for item in site.categories %}
 <p class="p-category-list">{{ item | first }}</p>
 {% endfor %}
+
+
+<div id="home">
+    {% for item in site.categories %}
+      <div class="div-main">
+      <div class="div-main-content">
+      <p class="p-category-list">{{ item | first }}</p>
+      <h1>{{ post.title }}</h1>
+      <div class="div-main-text">
+      </div>
+      </div>
+      </div>
+    {% endfor %}
+</div>
