--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -958,7 +958,7 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 
 /* 2019.07.22 ybebee9 add */
 .p-category-list{
- color: #3b3b3b;
+ color: #9f6afd;
  font-size: 45px;
  font-weight: bold;
  margin-bottom: 10px;
