--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section class="section-category">
-          <h1>Category</h1>
+          <h1>Index</h1>
           <nav>
             <ul>
               {% for item in site.categories %}
