--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -1,20 +1,19 @@
 ---
 layout: default
 ---
+<div id="home">
 {% for item in site.categories %}
 <p class="p-category-list">{{ item | first }}</p>
-{% endfor %}
-
-
-<div id="home">
-    {% for item in site.categories %}
-      <div class="div-main">
+<div class="div-main">
       <div class="div-main-content">
-      <p class="p-category-list">{{ item | first }}</p>
+      <p class="p-category-list">{{ post.categories }}</p>
       <h1>{{ post.title }}</h1>
       <div class="div-main-text">
       </div>
       </div>
       </div>
-    {% endfor %}
+{% endfor %}
 </div>
+
+
+
