--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -6,8 +6,8 @@ layout: default
 <p class="p-category-list">{{ item | first }}</p>
 <div class="div-main">
       <div class="div-main-content">
-      <p class="p-category-list">{{ post.categories }}</p>
-      <h1>{{ post.title }}</h1>
+      <p class="p-category-list">{{ page.categories }}</p>
+      <h1>{{ page.title }}</h1>
       <div class="div-main-text">
       </div>
       </div>
