--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -8,12 +8,12 @@ layout: default
       <div class="div-main-content">
       <p class="p-category-list">{{ page.categories }}</p>
       <h1>{{ page.title }}</h1>
-      <h2>{{ page.content }}</h2>
       <div class="div-main-text">
       </div>
       </div>
       </div>
 {% endfor %}
+<p>{{ site. categories }}</p>
 </div>
 
 
