--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -13,7 +13,7 @@ layout: default
       </div>
       </div>
 {% endfor %}
-<p>{{ site. categories }}</p>
+<p>빼애애앰{{ site. categories }}</p>
 </div>
 
 
