--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <div id="home">
-{% for item in site.categories %}
-<p class="p-category-list">{{ item | first }}</p>
+{% for a in site.categories %}
+<p class="p-category-list">{{ a | first }}</p>
 <div class="div-main">
       <div class="div-main-content">
-      <p class="p-category-list">{{ page.categories }}</p>
+      <p class="p-category-list">나왔냐{{ page.categories }}</p>
       <h1>{{ page.title }}</h1>
       <div class="div-main-text">
       </div>
