--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -14,6 +14,7 @@ layout: default
       </div>
 {% endfor %}
 <p>site.categories :: {{ site. categories }}</p>
+<p>site.title :: {{ site.title }}
 <p>page.categories :: {{ page. categories }}</p>
 <p>post.categories :: {{ post. categories }}</p>
 </div>
