--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div id="home">
-{% for a in site.categories.post.title %}
+{% for a in site.categories %}
 <p class="p-category-list">{{ a | first }}</p>
 <div class="div-main">
       <div class="div-main-content">
