--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -11,7 +11,7 @@ layout: default
 {% endfor %}
 
 {% for a in site.posts %}
-<p>헤헤{{ a.title }}a</p>
+<p>{{ a.title }}a</p>
 {% endfor %}
   
 <p>site.categories >: {{ site. categories }}</p>
