--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -11,7 +11,10 @@ layout: default
 {% endfor %}
 
 {% for a in site.posts %}
+<p>{{ a.category }}</p>
+<p>{{ a.categories }}</p>
 <p>{{ a.title }}</p>
+
 {% endfor %}
   
 <p>site.categories >: {{ site. categories }}</p>
