--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -11,9 +11,9 @@ layout: default
 {% endfor %}
 
 {% for a in site.posts %}
-<p>{{ a.category }}</p>
-<p>{{ a.categories }}</p>
-<p>{{ a.title }}</p>
+<p>1 :: {{ a.category }}</p>
+<p>2 :: {{ a.categories }}</p>
+<p>3 :: {{ a.title }}</p>
 
 {% endfor %}
   
