--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -4,18 +4,18 @@ layout: default
 <div id="home">
 {% for item in site.categories %}
 <p class="p-category-list">{{ item | first }}</p>
-  
-  
-  
-
-{% endfor %}
 
 {% for a in site.posts %}
-<p>1 :: {{ a.category }}</p>
-<p>2 :: {{ a.categories }}</p>
+{% if item == a.categories%}
+
 <p>3 :: {{ a.title }}</p>
 
 {% endfor %}
+  
+
+{% endfor %}
+
+
   
 <p>site.categories >: {{ site. categories }}</p>
 </div>
