--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -6,7 +6,7 @@ layout: default
 <p class="p-category-list">{{ item | first }}</p>
 
 {% for a in site.posts %}
-{% if item == a.categories%}
+{% if a.categories == item %}
 
 <p>3 :: {{ a.title }}</p>
 
