--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -20,7 +20,7 @@ layout: default
 
 
   
-<p>site.categories >:: {{ site. categories }}</p>
+<p>site.categories >::> {{ site. categories }}</p>
 </div>
 
 
