--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -4,8 +4,12 @@ layout: default
 <div id="home">
 {% for item in site.categories %}
 <p class="p-category-list">{{ item | first }}</p>
+strItem = {{ item | first }}  
+console.log(strItem);
+<p>strItem :: {{ strItem }}</p>
 
 {% for a in site.posts %}
+
 <p>a.title :: {{ a. title}}</p>
 {% if a.categories == item | first %}
 
