--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -8,7 +8,7 @@ layout: default
 
 {% for a in site.posts %}
 
-<p>a.title :: {{ a. title}}</p>
+<h1>{{ a. title}}</h1>
 {% if a.categories == item | first %}
 
 <p>3 :: {{ a.title }}</p>
