--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -12,12 +12,12 @@ layout: default
 {% for page in site.categories[category_name] %}
 {% assign has_categories = true %}
 
-<h2>{{ page.title }}</h2>
+<h2>gg : {{ page.title }}</h2>
 
 
 {% for a in site.posts %}
 
-<h2>{{ a. title}}</h2>
+<h2>z : {{ a. title}}</h2>
 {% if a.categories == item | first %}
 
 <p>3 :: {{ a.title }}</p>
