--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -4,7 +4,7 @@ layout: default
 <div id="home">
 {% for item in site.categories %}
 
-<p class="p-category-list">ㅎㅎ :: {{ item | first }}</p>
+<p class="p-category-list">{{ item | first }}</p>
 
 
 {% assign category_name = category | first %}
