--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 <div id="home">
+<p>category 기능 작업중(미완성 상태)</p>
+
 {% for item in site.categories %}
-
 <p class="p-category-list">{{ item | first }}</p>
-
 
 {% assign category_name = category | first %}
 
