--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div id="home">
-<p>category 기능 작업중(미완성 상태)</p>
+<p class="p-category-title">category 기능 작업중(미완성 상태)</p>
 
 {% for item in site.categories %}
 <p class="p-category-list">{{ item | first }}</p>
