--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -5,9 +5,9 @@ layout: default
 <p class="p-category-title">category 기능 작업중(미완성 상태)</p>
 
 {% for item in site.categories %}
-{% assign categorynm = item | first%}
+{% assign category_name = item | first%}
 <p class="p-category-list">{{ item | first }}</p>
-<h2>test :: {{ categorynm }}</h2>
+<h2>category_name :: {{ category_name }}</h2>
 
 {% endfor %}
 
