--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -932,7 +932,7 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 /* 2019.07.12 ybebee9 */
 .section-post{
   max-width: 80%;
-  float: right;
+  padding-left: 20%;
 }
 
 /* 2019.07.12 ybebee9 */
