--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -970,3 +970,19 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
  font-size: 45px;
  font-weight: bold;
 }
+
+/* 2019.07.24 ybebee9 */
+.h2-category-list h2 {
+  margin-bottom: 8px;
+  font-family: 'Atomy-Bold';
+  font-size: 22px;
+  font-weight: bold;
+  color: #474747;
+  text-indent: 4px;
+}
+.h2-category-list h2:before {
+  padding-right: 0.3em;
+  margin-left: -1.5em;
+  content: "//";
+  color: #ff9dd5;
+}
