--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -10,7 +10,7 @@ layout: default
 
 {% for page in site.categories[category_name] %}
 
-<h2 class="h2-category-list">page title :: {{ page.title }}</h2>
+<h2 class="h2-category-list">{{ page.title }}</h2>
 
 {% endfor %}
 
