--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -973,6 +973,7 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 
 /* 2019.07.24 ybebee9 */
 .h2-category-list h2 {
+  padding-left: 3%;
   margin-bottom: 8px;
   font-family: 'Atomy-Bold';
   font-size: 22px;
