--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div id="home">
-<p class="p-category-title">category 기능 작업중(미완성 상태)</p>
+<p class="p-category-title">Category 기능 작업중(미완성 상태)</p>
 
 {% for item in site.categories %}
 {% assign category_name = item | first%}
