--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,14 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-{{ content }}
+<div class="div-main">
+      <div class="div-main-content">
+      <p class="p-category">{{ post.categories }}</p>
+      <h1>{{ post.title }}</h1>
+      <div class="div-main-text">
+      {{ content }}
+      </div>
+      </div>
+      </div>
+
