--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: default
 
  <div class="div-main">
       <div class="div-main-content">
-      <p class="p-category">{{ categories }}</p>
-      <h1>{{ title }}</h1>
+      <p class="p-category">{{ page.categories }}</p>
+      <h1>{{ page.title }}</h1>
       <div class="div-main-text">
       {{ content }}
       </div>
