--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div id="home">
+<p class="p-category-title">Category</p>
 
 {% for item in site.categories %}
 {% assign category_name = item | first %}
