a-category-list 클래스 추가

--- a/_layouts/category-list.html
+++ b/_layouts/category-list.html
@@ -10,7 +10,7 @@ layout: default
 
 {% for page in site.categories[category_name] %}
 
-<h2 class="h2-category-list"><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
+<h2 class="h2-category-list"><a class="a-category-list" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
 
 {% endfor %}
 
