--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -963,6 +963,7 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
  font-size: 45px;
  font-weight: bold;
  margin-bottom: 10px;
+ padding-top: 3%;
 }
 
 /* 2019.07.24 ybebee9 */
