--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -655,7 +655,7 @@ form {
   font-weight: bold;
   color: #474747;
   text-indent: 4px;
-  padding-left: 3%;
+  padding-left: 2%;
 }
 #main-content h2:before {
   padding-right: 0.3em;
@@ -672,6 +672,7 @@ form {
   font-weight: bold;
   color: #474747;
   text-indent: 3px;
+  padding-left: 3%
 }
 
 #main-content h3:before {
