--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -672,7 +672,7 @@ form {
   font-weight: bold;
   color: #474747;
   text-indent: 3px;
-  padding-left: 3%
+  padding-left: 3%;
 }
 
 #main-content h3:before {
