--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -1,4 +1,4 @@
-.highlight  { background: #ffffff; }
+.highlight  { }
 .highlight .c { color: #75715e; font-style: italic } /* Comment */
 .highlight .err { color: #960050; background-color: #e3d2d2 } /* Error */
 .highlight .k { color: #66d9ef; } /* Keyword */
