--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -3,7 +3,7 @@
 .highlight .err { color: #f8f8f2; } /* Error */
 .highlight .k { color: #66d9ef; } /* Keyword */
 .highlight .o { color: #f92672; font-weight: bold } /* Operator */
-.highlight .cm { color: #75715e; font-style: italic } /* Comment.Multiline */
+.highlight .cm { color: #75715e;} /* Comment.Multiline */
 .highlight .cp { color: #75715e; font-weight: bold } /* Comment.Preproc */
 .highlight .c1 { color: #75715e; font-style: italic } /* Comment.Single */
 .highlight .cs { color: #75715e; font-weight: bold; font-style: italic } /* Comment.Special */
