--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -5,7 +5,7 @@
 .highlight .o { color: #f92672; font-weight: bold } /* Operator */
 .highlight .cm { color: #75715e;} /* Comment.Multiline */
 .highlight .cp { color: #75715e; font-weight: bold } /* Comment.Preproc */
-.highlight .c1 { color: #75715e; font-style: italic } /* Comment.Single */
+.highlight .c1 { color: #75715e; } /* Comment.Single */
 .highlight .cs { color: #75715e; font-weight: bold; font-style: italic } /* Comment.Special */
 .highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
 .highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
