--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -498,7 +498,7 @@ header h2 {
 }
 
 #content-wrapper {
-  padding-top: 30px;
+  /*padding-top: 30px;*/
   border-top: solid 1px #fff;
 }
 
@@ -923,23 +923,25 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 }
 
 /* 2019.07.12 ybebee9 */
-.section-category{
+/*.section-category{
   max-width: 20%;
   float: left;
   position: sticky;
   top:0;
-}
+}*/
 
 /* 2019.07.12 ybebee9 */
 .section-post{
-  max-width: 80%;
-  padding-left: 20%;
+  max-width: 1000%;  
 }
 
 /* 2019.07.12 ybebee9 */
 .li-category{
   font-weight: bold;
   font-size: 25px;
+  float: left;
+  margin-left: 3%;
+  list-style-type: none;
 }
 
 /* 2019.07.12 ybebee9 */
