section-category height : 120px 추가

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -492,7 +492,7 @@ header h2 {
 
 .inner {
   max-width: 1400px;
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   margin-left: auto;
   margin-right: auto;
 }
@@ -923,12 +923,13 @@ box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
 }
 
 /* 2019.07.12 ybebee9 */
-/*.section-category{
-  max-width: 20%;
+.section-category{
+  /*max-width: 20%;
   float: left;
   position: sticky;
-  top:0;
-}*/
+  top:0;*/
+  height: 120px;
+}
 
 /* 2019.07.12 ybebee9 */
 .section-post{
