ul class="ul-category" 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <section class="section-category">
           <h2>Category</h2>
           <nav>
-            <ul>
+            <ul class="ul-category">
               {% for item in site.categories %}
                 <li class="li-category">
                   <a href="{{ site.baseurl }}{% link categories.md %}">
